# pty

./: CHANGELOG.md  Cargo.toml  README.md  justfile
examples/: docs.rs  interactive.rs
src/: fork.rs  lib.rs  master.rs  pty.rs  slave.rs
src/fd/: err.rs  mod.rs
src/fork/: err.rs  mod.rs
src/fork/pty/: err.rs  mod.rs
src/fork/pty/master/: mod.rs
src/fork/pty/slave/: err.rs  mod.rs
tests/: 01_read.rs  02_write.rs
