[package]
name = "pty"
version = "0.3.0"
edition = "2021"
authors = [
    "Hika Hibariya <hibariya@gmail.com>",
    "Evan Stokdyk <evan.stokdyk@gmail.com>",
]
repository = "https://github.com/focus172/pty"
homepage = "https://github.com/focus172/pty"
license = "MIT"
description = "Fork with new pseudo-terminal (PTY)"
keywords = ["pty", "tty", "pseudo", "terminal", "fork"]

[dependencies]
errno = "0.3"
libc = "0.2"
resu = { package = "error-stack", version = "0.4" }
